# ParallelProgramming

./: CMakeLists.txt  bad_solve.cpp  integrate.cpp  main.cpp  matrixMul.cpp
